# take_home_robotics_coding_test

./: .gitignore  README.md
multi_agent_planning/: multi.sublime-project  multi.sublime-workspace  multi_robot_planning.mdj
multi_agent_planning/src/: README.md
multi_agent_planning/src/multi_agent_plan/: CMakeLists.txt  README.md  package.xml
multi_agent_planning/src/multi_agent_plan/include/: agent.h  map.h  planner.h
multi_agent_planning/src/multi_agent_plan/include/multi_agent_plan/: agent.h  agent_node.h  cell.h  cell_dfs.h  cell_dijk.h  det_planner_2d.h  dfs.h  dijkstra.h  manhattan_planner.h  manhattan_planner.hpp  map.h  planner.h  planner_2d.h  planner_2d.hpp  planner_node.h
multi_agent_planning/src/multi_agent_plan/launch/: test.launch
multi_agent_planning/src/multi_agent_plan/msg/: Pose.msg
multi_agent_planning/src/multi_agent_plan/rviz/: roadmap.rviz
multi_agent_planning/src/multi_agent_plan/src/: agent.cpp  agent_node.cpp  agent_node_app.cpp  manhattan_planner.cpp  map.cpp  planner.cpp  planner_node.cpp  planner_node_app.cpp
multi_agent_planning/src/multi_agent_plan/srv/: GetPlan.srv  Set2DPose.srv  UpdateGoal.srv
multi_agent_planning/src/multi_agent_plan/test/: ros_testing_agent_planner.cpp  ros_testing_agent_planner.launch  test_multi_agent_plan.cpp  testmap.yaml
odometry/src/: README.md
odometry/src/odom/: CMakeLists.txt  package.xml
odometry/src/odom/launch/: odom.launch
odometry/src/odom/scripts/: pose_est.py
puppet_master/src/: README.md
puppet_master/src/take_home_test/: CMakeLists.txt  package.xml
puppet_master/src/take_home_test/action/: Move.action
puppet_master/src/take_home_test/launch/: run.launch
puppet_master/src/take_home_test/src/: puppet_master.cpp
puppet_master/src/turtle_action/: CMakeLists.txt  package.xml
puppet_master/src/turtle_action/include/turtle_action/: turtle_robot.hpp
puppet_master/src/turtle_action/src/: turtle_robot.cpp  turtle_robot_action.cpp
tricycle_pose_estimator/src/: README.md
tricycle_pose_estimator/src/dataset/: dataset.txt  dataset0.csv  dataset1.csv  dataset2.csv  dataset3.csv  dataset4.csv  dataset5.csv
tricycle_pose_estimator/src/scripts/: trycicle_pose_estimator.py
