<?xml version="1.0"?>
<package format="2">
	<name>take_home_test</name>
	<version>0.1.0</version>
	<description>ROS1 take-home test</description>
	<maintainer email="example@example.com">example</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>turtlesim</build_depend>

	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>turtlesim</build_export_depend>
	<build_export_depend>actionlib_msgs</build_export_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>turtlesim</exec_depend>
	<exec_depend>actionlib</exec_depend>
	<exec_depend>message_runtime</exec_depend>
</package>
